Use modern toList() instead of collect(Collectors.toList())
Replace collect(Collectors.toList()) with toList() in:
- AuthController: roles stream collection
- UserInfo: authorities stream collection

Remove unused Collectors imports.

Java 16+ provides Stream.toList() as a more concise alternative.